[gd_scene load_steps=41 format=3 uid="uid://cwqnh58yjhh2y"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_ewml5"]
[ext_resource type="Texture2D" uid="uid://cas5hidfhwmvx" path="res://images/Menu_fon.png" id="1_k0aqk"]
[ext_resource type="Texture2D" uid="uid://cv6rcd6csv5jd" path="res://images/Settings_button/Button_normal.png" id="2_84yu8"]
[ext_resource type="Texture2D" uid="uid://dbmx0ibbmmd5p" path="res://images/lvl_fon.png" id="2_m0xb1"]
[ext_resource type="Texture2D" uid="uid://rxj7brlvec6u" path="res://images/FON TEXT.png" id="2_qv5fe"]
[ext_resource type="Texture2D" uid="uid://b00a64po3xik8" path="res://images/Settings_button/button_pressed.png" id="3_q3au5"]
[ext_resource type="Texture2D" uid="uid://c83bg8t7e2fsu" path="res://images/lang/eng.png" id="4_1dqwm"]
[ext_resource type="Texture2D" uid="uid://dfse04011mbjt" path="res://images/lang/eng2.png" id="5_lfrol"]
[ext_resource type="Texture2D" uid="uid://bjt7to6vyx6r0" path="res://images/lang/rus1.png" id="6_oesbx"]
[ext_resource type="Texture2D" uid="uid://3nnwahq0ptt1" path="res://images/lang/rus2.png" id="7_6owqr"]
[ext_resource type="Texture2D" uid="uid://c1dccwqdtnx3j" path="res://images/lvl/lvl1.png" id="9_a35dk"]
[ext_resource type="Texture2D" uid="uid://bxta3nvxaa3bc" path="res://images/lvl/lvl1_1.png" id="10_fn3ie"]
[ext_resource type="Texture2D" uid="uid://yxeflw0nqsyr" path="res://images/lvl/lvl2.png" id="11_wdc4k"]
[ext_resource type="Texture2D" uid="uid://bfbnuqprcd6d7" path="res://images/lvl/lvl2_1.png" id="12_fk5bu"]
[ext_resource type="Texture2D" uid="uid://b4ef8dd38hfl8" path="res://images/lvl/lvl2_block.png" id="13_antfm"]
[ext_resource type="Texture2D" uid="uid://djo4uocw1se3" path="res://images/lvl/lvl3.png" id="14_kxg3q"]
[ext_resource type="Texture2D" uid="uid://cnkx715y3u6sd" path="res://images/lvl/lvl3_1.png" id="15_fbt0t"]
[ext_resource type="Texture2D" uid="uid://cbxg1mhb6mvyx" path="res://images/lvl/lvl3_block.png" id="16_vml8n"]
[ext_resource type="Texture2D" uid="uid://qxqdr3w4pso0" path="res://images/lvl/lvl4.png" id="17_sois4"]
[ext_resource type="Texture2D" uid="uid://btoch6f5qyrs" path="res://images/lvl/lvl4_1.png" id="18_jqcyy"]
[ext_resource type="Texture2D" uid="uid://cth0jwdyu0foq" path="res://images/lvl/lvl4_block.png" id="19_2t2ip"]
[ext_resource type="Texture2D" uid="uid://d117h3p3nvjmi" path="res://images/lvl/lvl5.png" id="20_ei8wl"]
[ext_resource type="Texture2D" uid="uid://b5uk5n7bch3pv" path="res://images/lvl/lvl5_1.png" id="21_qdxtc"]
[ext_resource type="Texture2D" uid="uid://qexcmq0cl5u2" path="res://images/lvl/lvl5_block.png" id="22_6ooqm"]
[ext_resource type="Texture2D" uid="uid://dhikrwe3pcs8y" path="res://images/lvl/lvl6.png" id="23_g43h6"]
[ext_resource type="Texture2D" uid="uid://brgf3t1rhdtgp" path="res://images/lvl/lvl6_1.png" id="24_pm1ti"]
[ext_resource type="Texture2D" uid="uid://bl4ei0tovhfl4" path="res://images/lvl/lvl6_block.png" id="25_23n0x"]
[ext_resource type="Texture2D" uid="uid://beyij0ixtnqmy" path="res://images/lvl/lvl7.png" id="26_rdvcx"]
[ext_resource type="Texture2D" uid="uid://i8snnohjhmlu" path="res://images/lvl/lvl7_1.png" id="27_eqtbw"]
[ext_resource type="Texture2D" uid="uid://5os74dipwgwf" path="res://images/lvl/lvl7_block.png" id="28_nphjm"]
[ext_resource type="Texture2D" uid="uid://cmijilu4jjgg3" path="res://images/lvl/lvl8.png" id="29_dkwvx"]
[ext_resource type="Texture2D" uid="uid://bl1datch4q1gt" path="res://images/lvl/lvl8_1.png" id="30_bagcv"]
[ext_resource type="Texture2D" uid="uid://jujxlgoipiqr" path="res://images/lvl/lvl8_block.png" id="31_psedu"]
[ext_resource type="Texture2D" uid="uid://ckw2olvgesi38" path="res://images/lvl/lvl9.png" id="32_hjlam"]
[ext_resource type="Texture2D" uid="uid://dm0rg0qgj5gag" path="res://images/lvl/lvl9_1.png" id="33_d0n8w"]
[ext_resource type="Texture2D" uid="uid://b7o8kjosqnckv" path="res://images/lvl/lvl9_block.png" id="34_o47mu"]
[ext_resource type="Texture2D" uid="uid://cqkv70iynu5qr" path="res://images/lvl/lvl10.png" id="35_actr5"]
[ext_resource type="Texture2D" uid="uid://t00ixfwr2vo5" path="res://images/lvl/lvl10_1.png" id="36_e5ww1"]
[ext_resource type="Texture2D" uid="uid://g182bbr4tedx" path="res://images/lvl/lvl10_block.png" id="37_xmjbd"]
[ext_resource type="PackedScene" uid="uid://cnsjx7656n0g0" path="res://scenes/settings_menu.tscn" id="40_6efss"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ewml5")

[node name="Fon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_k0aqk")
expand_mode = 1

[node name="Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Vbox" type="VBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 65

[node name="Settings" type="HBoxContainer" parent="Menu/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 60

[node name="Settings" type="HBoxContainer" parent="Menu/Vbox/Settings"]
layout_mode = 2

[node name="Settings_but" type="TextureButton" parent="Menu/Vbox/Settings/Settings"]
layout_mode = 2
texture_normal = ExtResource("2_84yu8")
texture_pressed = ExtResource("3_q3au5")

[node name="Settings_but2" type="TextureButton" parent="Menu/Vbox/Settings/Settings"]
layout_mode = 2
disabled = true
texture_pressed = ExtResource("3_q3au5")

[node name="Text" type="HBoxContainer" parent="Menu/Vbox/Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="Menu/Vbox/Settings/Text"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_qv5fe")

[node name="Lang" type="HBoxContainer" parent="Menu/Vbox/Settings"]
layout_mode = 2
size_flags_horizontal = 8

[node name="rus" type="TextureButton" parent="Menu/Vbox/Settings/Lang"]
layout_mode = 2
texture_normal = ExtResource("6_oesbx")
texture_pressed = ExtResource("7_6owqr")

[node name="eng" type="TextureButton" parent="Menu/Vbox/Settings/Lang"]
layout_mode = 2
texture_normal = ExtResource("4_1dqwm")
texture_pressed = ExtResource("5_lfrol")

[node name="Lvlfon" type="TextureRect" parent="Menu/Vbox"]
layout_mode = 2
texture = ExtResource("2_m0xb1")

[node name="Lvls" type="MarginContainer" parent="Menu/Vbox/Lvlfon"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.996
anchor_bottom = 0.989
offset_left = 7.0
offset_top = 5.0
offset_right = -0.116089
offset_bottom = 0.169983
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Vlvls" type="VBoxContainer" parent="Menu/Vbox/Lvlfon/Lvls"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="lvl1-5" type="HBoxContainer" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="lvl1" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5"]
layout_mode = 2
texture_normal = ExtResource("9_a35dk")
texture_pressed = ExtResource("10_fn3ie")

[node name="lvl2" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("11_wdc4k")
texture_pressed = ExtResource("12_fk5bu")
texture_disabled = ExtResource("13_antfm")

[node name="lvl3" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("14_kxg3q")
texture_pressed = ExtResource("15_fbt0t")
texture_disabled = ExtResource("16_vml8n")

[node name="lvl4" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("17_sois4")
texture_pressed = ExtResource("18_jqcyy")
texture_disabled = ExtResource("19_2t2ip")

[node name="lvl5" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("20_ei8wl")
texture_pressed = ExtResource("21_qdxtc")
texture_disabled = ExtResource("22_6ooqm")

[node name="lvl6-10" type="HBoxContainer" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="lvl6" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("23_g43h6")
texture_pressed = ExtResource("24_pm1ti")
texture_disabled = ExtResource("25_23n0x")

[node name="lvl7" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("26_rdvcx")
texture_pressed = ExtResource("27_eqtbw")
texture_disabled = ExtResource("28_nphjm")

[node name="lvl8" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("29_dkwvx")
texture_pressed = ExtResource("30_bagcv")
texture_disabled = ExtResource("31_psedu")

[node name="lvl9" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("32_hjlam")
texture_pressed = ExtResource("33_d0n8w")
texture_disabled = ExtResource("34_o47mu")

[node name="lvl10" type="TextureButton" parent="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("35_actr5")
texture_pressed = ExtResource("36_e5ww1")
texture_disabled = ExtResource("37_xmjbd")

[node name="Settings_menu" parent="." instance=ExtResource("40_6efss")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Menu/Vbox/Settings/Settings/Settings_but" to="Settings_menu" method="_on_settings_but_pressed"]
[connection signal="pressed" from="Menu/Vbox/Settings/Lang/rus" to="." method="_on_rus_pressed"]
[connection signal="pressed" from="Menu/Vbox/Settings/Lang/eng" to="." method="_on_eng_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5/lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl1-5/lvl5" to="." method="_on_lvl_5_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10/lvl6" to="." method="_on_lvl_6_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10/lvl7" to="." method="_on_lvl_7_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10/lvl8" to="." method="_on_lvl_8_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10/lvl9" to="." method="_on_lvl_9_pressed"]
[connection signal="pressed" from="Menu/Vbox/Lvlfon/Lvls/Vlvls/lvl6-10/lvl10" to="." method="_on_lvl_10_pressed"]
